fix(ui-vision): ticket details spacing issues (#11478)

--- a/packages/tickets/src/components/InfobarTicketDetails/InfobarTicketDetails.less
+++ b/packages/tickets/src/components/InfobarTicketDetails/InfobarTicketDetails.less
@@ -1,9 +1,5 @@
 :local {
     .container {
-        display: flex;
-        flex-direction: column;
-        gap: var(--spacing-md);
-        padding: var(--spacing-md);
         border-bottom: 1px solid var(--border-neutral-default);
         background: var(--elevation-neutral-default);
     }
